[package]
name = "punch_clock"
version = "0.7.0"
edition = "2021"
description = "A work-hours tracker"
repository = "https://github.com/Teajey/punch_clock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.3.0", features = ["derive"] }
dialoguer = { version = "0.10.4", default-features = false }
thiserror = "1.0.40"

[dev-dependencies]
insta = "1.34.0"
pretty_assertions = "1.4.0"

[build-dependencies]
toml = "0.7.8"
vergen-git2 = "1.0.7"
